# 1student1schl

./: .gitignore  LICENSE  README.md  agentic_rag.py  app.py  main.py  pyproject.toml  requirements.txt  utils.py
pages/: 1_essay_feedback.py  1_essay_grader.py  2_math_grader.py  2_which_plant_is_this.py  3_general_chatbot.py  4_knowledge_games.py  5_learn_languages.py  6_math_grader.py  7_study_mode.py
