[project]
name = "1student1schl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "agno>=1.7.0",
    "aiofiles>=24.1.0",
    "anthropic>=0.55.0",
    "beautifulsoup4>=4.13.4",
    "duckduckgo-search>=8.0.4",
    "nest-asyncio>=1.6.0",
    "ollama>=0.5.1",
    "openai>=1.93.0",
    "pgvector>=0.4.1",
    "psycopg>=3.2.9",
    "pypdf>=5.6.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
]
